feat: add answers swagger
